name:                pkcloud-core
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/name/project
-- license:             
license-file:        LICENSE
author:              James Parker
maintainer:          jp@pkauth.com
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     
                       PKCloud
                       PKCloud.File
                       PKCloud.Import
                       PKCloud.Security
  other-modules:
                       PKCloud.Core
                       PKCloud.Internal
  build-depends:       base >= 4.7 && < 5
                     , esqueleto
                     , persistent
                     , persistent-template
                     , shakespeare
                     , text
                     , time
                     , transformers
                     , yesod-auth
                     , yesod-core
                     , yesod-form
                     , yesod-persistent
  default-language:    Haskell2010
  default-extensions:  TypeFamilies, TemplateHaskell, QuasiQuotes, MultiParamTypeClasses, FunctionalDependencies, FlexibleContexts, ConstraintKinds, RankNTypes, FlexibleInstances, UndecidableInstances, OverloadedStrings
  ghc-options:         -Werror -Wall -fno-warn-orphans -fno-warn-type-defaults -fno-warn-name-shadowing

-- executable new-template-exe
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   build-depends:       base
--                      , new-template
--   default-language:    Haskell2010

test-suite pk-cloud-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , pkcloud-core
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/name/project
